--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <meta property="og:image" content="http://www.sparkfinancial.com/images/bigA.png" />
-    <link rel="image_src" href="http://www.sparkfinancial.com/images/bigA.png" />
+  <meta property="og:image" content="http://www.sparkfinancial.com/images/bigA.png" />
+  <link rel="image_src" href="http://www.sparkfinancial.com/images/bigA.png" />
 
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,37 +19,31 @@
   ga('create', 'UA-44335456-2', 'www.sparkfinancial.com');
   ga('send', 'pageview');
 </script>
+
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <title>Acyclic LLC</title>
-  </head>
-  <body>
-  <header>
-      <div class="container">
-        <div id="title1">Λcyclic LLC</div><div id="title2">&mdash;</div><div id="title3">Acyclic LLC</div>
-      </div>
-    </header>
+  <title>Spark Financial</title>
+</head>
+
+<body>
+<header>
+  <div class="container">
+    <div id="title1">Spark Financial</div><div id="title2">&mdash;</div><div id="title3">Spark Financial</div>
+  </div>
+</header>
+
 <hr/>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>Financial Technology Consultation</h3>
+<div class="container">
+<section id="main_content">
+<h3>Investments, Advisory, Financial Technology Consultation</h3>
 
-<p>23 years of experience in the architecture, implementation, deployment
-and management of large-scale derivatives risk management
-applications.
+<p>
 </p>
-<p>Beautiful, robust, appropriate solutions to complex problems.</p>
 
-<h3>Expertise</h3>
+<h3>.</h3>
 
-<p>Coding and design with modern languages and architectures.</p>
-<p>Massively distributed computing and data systems.</p>
-<p>Hiring, organization and management of technical and quantitative staff.</p>
-<p>Requirements gathering and refinement.</p>
-<p>Derivatives structuring, risk measurement and aggregation, scenario analysis,
-regulatory control, algorithmic execution.</p>
 <h3>Contact</h3>
 <p>
 <a href="mailto:mark.appel@www.sparkfinancial.com">mark.appel@www.sparkfinancial.com</a>
@@ -61,5 +55,6 @@ regulatory control, algorithmic execution.</p>
 <a href="http://www.linkedin.com/in/mappel">Linkedin</a>
 <a href="http://twitter.com/markappel">Twitter</a>
 </p>
+
 </body>
 </html>
