--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <meta property="og:image" content="http://www.sparkfinancial.com/images/bigA.png" />
-  <link rel="image_src" href="http://www.sparkfinancial.com/images/bigA.png" />
+<meta property="og:image" content="http://www.sparkfinancial.com/images/bigA.png" />
+<link rel="image_src" href="http://www.sparkfinancial.com/images/bigA.png" />
 
-  <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-44335456-2', 'www.sparkfinancial.com');
   ga('send', 'pageview');
 </script>
@@ -23,13 +22,13 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <title>Spark Financial</title>
+<title>Spark Financial</title>
 </head>
 
 <body>
 <header>
   <div class="container">
-    <div id="title1">Spark Financial</div><div id="title2">&mdash;</div><div id="title3">Spark Financial</div>
+    <div id="title1">Spark1Financial</div><div id="title2">&mdash;</div><div id="title3">Spark3Financial</div>
   </div>
 </header>
 
@@ -37,16 +36,16 @@
 
 <div class="container">
 <section id="main_content">
-<h3>Investments, Advisory, Financial Technology Consultation</h3>
+<h3>Investments, Business Advisory, Financial Technology Consultation</h3>
 
 <p>
 </p>
 
-<h3>.</h3>
+<h3></h3>
 
 <h3>Contact</h3>
 <p>
-<a href="mailto:mark.appel@www.sparkfinancial.com">mark.appel@www.sparkfinancial.com</a>
+<a href="mailto:mark.appel@sparkfinancial.com">mark.appel@sparkfinancial.com</a>
 </p>
 
 <h3>Links</h3>
