--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 <header>
   <div class="container">
-    <div id="title1">Spark1Financial</div><div id="title2">&mdash;</div><div id="title3">Spark3Financial</div>
+    <div id="title2">Spark Financial</div><div id="title2">&mdash;</div><div id="title3">Spark Financial</div>
   </div>
 </header>
 
