--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -28,7 +27,7 @@
 <body>
 <header>
   <div class="container">
-    <div id="title1">Spark Financial</div><div id="title2">&mdash;</div><div id="title3">Spark Financial</div>
+    <div id="title1">Spark Financial</div><div id="title2"></div><div id="title3">Spark Financial</div>
   </div>
 </header>
 
