--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <header>
   <div class="container">
-    <div id="title1">Spark Financial</div><div id="title2"></div><div id="title3">Spark Financial</div>
+    <div id="title1">Spark Financial</div>
   </div>
 </header>
 
@@ -49,7 +49,6 @@
 
 <h3>Links</h3>
 <p>
-<a href="http://github.com/mappel">github</a>
 <a href="http://www.linkedin.com/in/mappel">Linkedin</a>
 <a href="http://twitter.com/markappel">Twitter</a>
 </p>
