--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="container">
 <section id="main_content">
-<h3>Investments, Business Advisory, Financial Technology Consultation</h3>
+<h3>Investments, Incubation, Advisory, Financial & Mission Critical Technology</h3>
 
 <p>
 </p>
